--- a/VRChat/46/936646.html
+++ b/VRChat/46/936646.html
@@ -78,9 +78,9 @@
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <div class="page-wrap">
       <main role="main">
-        <div class="market-item-detail" data-product-brand=
-        "brabbits" data-product-category="127" data-product-id=
-        "936646" data-product-list="market_show"
+        <div class="market-item-detail u-bg-white"
+        data-product-brand="brabbits" data-product-category="127"
+        data-product-id="936646" data-product-list="market_show"
         data-product-price="2100" data-tracking="detail_item">
           <nav>
             <div class="breadcrumbs u-border-b u-border-100">
@@ -104,14 +104,15 @@
             </div>
           </nav>
           <article>
-            <div class="market-item-detail-article">
+            <div class=
+            "market-item-detail-article u-d-flex u-flex-column u-align-items-center u-pb-600 u-bg-white">
               <div class=
               "market-item-detail__exhibition-banner container">
               </div>
-              <div class="market-item-detail-article__body">
+              <div class="u-bg-white u-pt-600 u-px-700">
                 <div class="container">
-                  <div class="lo-grid">
-                    <div class="flex-order-summary">
+                  <div class="u-d-flex">
+                    <div class="u-order-1 l-col-2of5 u-pl-600">
                       <header>
                         <div class="u-mb-200">
                           <div class="eventname-flag">
@@ -125,8 +126,7 @@
                             </div></a>
                           </div>
                         </div>
-                        <div class=
-                        "flex-order-summary-shop_name-field">
+                        <div class="u-my-200 u-tpg-title3">
                           <a class="nav" target="_blank"
                           data-product-list=
                           "from market_show via market_item_detail to shop_index"
@@ -138,13 +138,13 @@
                             "Vignettia Works(B-Rabbits Factory)"
                             class="user-avatar at-item-summary"
                             src="https://booth.pximg.net/c/48x48/users/2720109/icon_image/0e35c0c0-7f67-4d76-88c4-8b3043bee5e7_base_resized.jpg">
-                            <div class=
-                            "flex-order-summary-shop_name">
+                            <div class="u-text-ellipsis">
                               Vignettia Works(B-Rabbits Factory)
                             </div>
                           </div></a>
                         </div>
-                        <h2 class="item-summary__item-name">
+                        <h2 class=
+                        "u-text-wrap u-tpg-title1 u-mt-0 u-mb-400">
                           【VRアバター】Rana -First- (ラナ -初期Ver-)
                         </h2>
                         <div class="item-summary__caption"></div>
@@ -232,18 +232,17 @@
                         </ul>
                       </section>
                       <section>
-                        <div class="share-btns">
-                          <div class="social-btn twitter">
-                            <a data-url=
-                            "https://booth.pm/ja/items/936646"
-                            data-lang="ja" data-hashtags="booth_pm"
-                            data-text=
-                            "【VRアバター】Rana -First- (ラナ -初期Ver-) | Vignettia Works(B-Rabbits Factory)"
-                            data-count="none" class=
-                            "twitter-share-button" href=
-                            "https://twitter.com/share">ツイート</a>
-                          </div>
-                          <div class="social-btn facebook">
+                        <div class=
+                        "share-btns u-d-flex u-flex-1 u-align-items-center u-justify-content-start u-px-200 u-py-400">
+                          <a data-url=
+                          "https://booth.pm/ja/items/936646"
+                          data-lang="ja" data-hashtags="booth_pm"
+                          data-text=
+                          "【VRアバター】Rana -First- (ラナ -初期Ver-) | Vignettia Works(B-Rabbits Factory)"
+                          data-count="none" class=
+                          "twitter-share-button" href=
+                          "https://twitter.com/share">ツイート</a>
+                          <div class="u-ml-300">
                             <div class="fb-like" data-action="like"
                             data-href=
                             "https://booth.pm/ja/items/936646"
@@ -253,7 +252,7 @@
                         </div>
                       </section>
                     </div>
-                    <div class="flex-order-body">
+                    <div class="u-order-0 l-col-3of5 u-pr-500">
                       <div class="primary-image-area">
                         <div>
                           <div class=
@@ -317,8 +316,8 @@
                       </div>
                       <section>
                         <div class=
-                        "market-item-detail-description">
-                          <p class="autolink">
+                        "js-market-item-detail-description">
+                          <p class="autolink u-text-wrap">
                             (2019/11/19更新-下記補足一読をお願いします。)
                             (2018/08/18-モデルデータ1.0b更新) ■モデル概要
                             VRchatやバーチャルキャスト向けのオリジナル3Dモデルです。
@@ -376,8 +375,7 @@
                         </div>
                       </section>
                       <section>
-                        <div class=
-                        "market-item-detail-module page_design" id=
+                        <div class="u-text-wrap page_design" id=
                         "modules"></div>
                       </section>
                     </div>
