--- a/VRChat/85/817885.html
+++ b/VRChat/85/817885.html
@@ -78,10 +78,11 @@
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <div class="page-wrap">
       <main role="main">
-        <div class="market-item-detail" data-product-brand=
-        "shajikuworks" data-product-category="169" data-product-id=
-        "817885" data-product-list="market_show"
-        data-product-price="920" data-tracking="detail_item">
+        <div class="market-item-detail u-bg-white"
+        data-product-brand="shajikuworks" data-product-category=
+        "169" data-product-id="817885" data-product-list=
+        "market_show" data-product-price="920" data-tracking=
+        "detail_item">
           <nav>
             <div class="breadcrumbs u-border-b u-border-100">
               <div class="container">
@@ -104,17 +105,17 @@
             </div>
           </nav>
           <article>
-            <div class="market-item-detail-article">
+            <div class=
+            "market-item-detail-article u-d-flex u-flex-column u-align-items-center u-pb-600 u-bg-white">
               <div class=
               "market-item-detail__exhibition-banner container">
               </div>
-              <div class="market-item-detail-article__body">
+              <div class="u-bg-white u-pt-600 u-px-700">
                 <div class="container">
-                  <div class="lo-grid">
-                    <div class="flex-order-summary">
+                  <div class="u-d-flex">
+                    <div class="u-order-1 l-col-2of5 u-pl-600">
                       <header>
-                        <div class=
-                        "flex-order-summary-shop_name-field">
+                        <div class="u-my-200 u-tpg-title3">
                           <a class="nav" target="_blank"
                           data-product-list=
                           "from market_show via market_item_detail to shop_index"
@@ -125,13 +126,13 @@
                             <img alt="車軸直売所 SHAJIKU store" class=
                             "user-avatar at-item-summary" src=
                             "https://booth.pximg.net/c/48x48/users/2147604/icon_image/be4c8bb7-d7be-4a5d-aa6c-5a3c3cec3971_base_resized.jpg">
-                            <div class=
-                            "flex-order-summary-shop_name">
+                            <div class="u-text-ellipsis">
                               車軸直売所 SHAJIKU store
                             </div>
                           </div></a>
                         </div>
-                        <h2 class="item-summary__item-name">
+                        <h2 class=
+                        "u-text-wrap u-tpg-title1 u-mt-0 u-mb-400">
                           【実物】頭に突き刺して！車軸ピンバッジ
                         </h2>
                         <div class="item-summary__caption"></div>
@@ -227,18 +228,17 @@
                         </ul>
                       </section>
                       <section>
-                        <div class="share-btns">
-                          <div class="social-btn twitter">
-                            <a data-url=
-                            "https://booth.pm/ja/items/817885"
-                            data-lang="ja" data-hashtags="booth_pm"
-                            data-text=
-                            "【実物】頭に突き刺して！車軸ピンバッジ | 車軸直売所 SHAJIKU store"
-                            data-count="none" class=
-                            "twitter-share-button" href=
-                            "https://twitter.com/share">ツイート</a>
-                          </div>
-                          <div class="social-btn facebook">
+                        <div class=
+                        "share-btns u-d-flex u-flex-1 u-align-items-center u-justify-content-start u-px-200 u-py-400">
+                          <a data-url=
+                          "https://booth.pm/ja/items/817885"
+                          data-lang="ja" data-hashtags="booth_pm"
+                          data-text=
+                          "【実物】頭に突き刺して！車軸ピンバッジ | 車軸直売所 SHAJIKU store"
+                          data-count="none" class=
+                          "twitter-share-button" href=
+                          "https://twitter.com/share">ツイート</a>
+                          <div class="u-ml-300">
                             <div class="fb-like" data-action="like"
                             data-href=
                             "https://booth.pm/ja/items/817885"
@@ -248,7 +248,7 @@
                         </div>
                       </section>
                     </div>
-                    <div class="flex-order-body">
+                    <div class="u-order-0 l-col-3of5 u-pr-500">
                       <div class="primary-image-area">
                         <div>
                           <div class=
@@ -281,15 +281,16 @@
                       </div>
                       <section>
                         <div class=
-                        "market-item-detail-description">
-                          <p class="autolink">
+                        "js-market-item-detail-description">
+                          <p class="autolink u-text-wrap">
                             君も頭に車軸を通して車輪を付けよう！ 前代未聞の脳髄貫通型車軸ピンバッジ！
                             ※この商品はpixivFACTORYで作られた商品です。サンプル画像は完成イメージのため、実物と異なる場合があります。
                           </p>
                           <div class="factory-description">
                             <div class="item-detail">
                               <p>
-                                <span class="autolink">素材：金属 /
+                                <span class=
+                                "autolink u-text-wrap">素材：金属 /
                                 樹脂<br>
                                 プリント：カラープリント<br>
                                 本体サイズ：丸型 直径25mm<br>
@@ -298,11 +299,12 @@
                               </p>
                               <p>
                                 <span class=
-                                "autolink"><small>パーツの細かな形状等、予告なく変更する場合がございます。</small></span>
+                                "autolink u-text-wrap"><small>パーツの細かな形状等、予告なく変更する場合がございます。</small></span>
                               </p>
                             </div>
                             <h4>
-                              <span class="autolink">発送予定日</span>
+                              <span class=
+                              "autolink u-text-wrap">発送予定日</span>
                             </h4>
                             <div class="item-detail">
                               <table class="condensed">
@@ -313,15 +315,14 @@
                                   <td class="is-right"></td>
                                 </tr>
                               </table><span class=
-                              "autolink"><small class=
+                              "autolink u-text-wrap"><small class=
                               "memo">※お振込を確認してから製造を開始するため、銀行・コンビニ決済でお支払いの際は記載されている発送予定日より遅くなる場合があります。</small></span>
                             </div>
                           </div>
                         </div>
                       </section>
                       <section>
-                        <div class=
-                        "market-item-detail-module page_design" id=
+                        <div class="u-text-wrap page_design" id=
                         "modules"></div>
                       </section>
                     </div>
