--- a/VRChat/47/1330347.html
+++ b/VRChat/47/1330347.html
@@ -77,10 +77,11 @@
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <div class="page-wrap">
       <main role="main">
-        <div class="market-item-detail" data-product-brand=
-        "wata-ofuton" data-product-category="134" data-product-id=
-        "1330347" data-product-list="market_show"
-        data-product-price="0" data-tracking="detail_item">
+        <div class="market-item-detail u-bg-white"
+        data-product-brand="wata-ofuton" data-product-category=
+        "134" data-product-id="1330347" data-product-list=
+        "market_show" data-product-price="0" data-tracking=
+        "detail_item">
           <nav>
             <div class="breadcrumbs u-border-b u-border-100">
               <div class="container">
@@ -104,17 +105,17 @@
             </div>
           </nav>
           <article>
-            <div class="market-item-detail-article">
+            <div class=
+            "market-item-detail-article u-d-flex u-flex-column u-align-items-center u-pb-600 u-bg-white">
               <div class=
               "market-item-detail__exhibition-banner container">
               </div>
-              <div class="market-item-detail-article__body">
+              <div class="u-bg-white u-pt-600 u-px-700">
                 <div class="container">
-                  <div class="lo-grid">
-                    <div class="flex-order-summary">
+                  <div class="u-d-flex">
+                    <div class="u-order-1 l-col-2of5 u-pl-600">
                       <header>
-                        <div class=
-                        "flex-order-summary-shop_name-field">
+                        <div class="u-my-200 u-tpg-title3">
                           <a class="nav" target="_blank"
                           data-product-list=
                           "from market_show via market_item_detail to shop_index"
@@ -125,13 +126,13 @@
                             <img alt="綿100％のお布団" class=
                             "user-avatar at-item-summary" src=
                             "https://booth.pximg.net/c/48x48/users/681225/icon_image/23d2cda6-d754-4823-b4b3-d5d0618b34c7_base_resized.jpg">
-                            <div class=
-                            "flex-order-summary-shop_name">
+                            <div class="u-text-ellipsis">
                               綿100％のお布団
                             </div>
                           </div></a>
                         </div>
-                        <h2 class="item-summary__item-name">
+                        <h2 class=
+                        "u-text-wrap u-tpg-title1 u-mt-0 u-mb-400">
                           Arktoon-Shaders_ClipCostume
                         </h2>
                         <div class="item-summary__caption"></div>
@@ -205,18 +206,17 @@
                         </ul>
                       </section>
                       <section>
-                        <div class="share-btns">
-                          <div class="social-btn twitter">
-                            <a data-url=
-                            "https://booth.pm/ja/items/1330347"
-                            data-lang="ja" data-hashtags="booth_pm"
-                            data-text=
-                            "Arktoon-Shaders_ClipCostume | 綿100％のお布団"
-                            data-count="none" class=
-                            "twitter-share-button" href=
-                            "https://twitter.com/share">ツイート</a>
-                          </div>
-                          <div class="social-btn facebook">
+                        <div class=
+                        "share-btns u-d-flex u-flex-1 u-align-items-center u-justify-content-start u-px-200 u-py-400">
+                          <a data-url=
+                          "https://booth.pm/ja/items/1330347"
+                          data-lang="ja" data-hashtags="booth_pm"
+                          data-text=
+                          "Arktoon-Shaders_ClipCostume | 綿100％のお布団"
+                          data-count="none" class=
+                          "twitter-share-button" href=
+                          "https://twitter.com/share">ツイート</a>
+                          <div class="u-ml-300">
                             <div class="fb-like" data-action="like"
                             data-href=
                             "https://booth.pm/ja/items/1330347"
@@ -226,7 +226,7 @@
                         </div>
                       </section>
                     </div>
-                    <div class="flex-order-body">
+                    <div class="u-order-0 l-col-3of5 u-pr-500">
                       <div class="primary-image-area">
                         <div>
                           <div class=
@@ -286,8 +286,8 @@
                       </div>
                       <section>
                         <div class=
-                        "market-item-detail-description">
-                          <p class="autolink">
+                        "js-market-item-detail-description">
+                          <p class="autolink u-text-wrap">
                             　synqark様が開発された「Arktoon-Shaders」を改変し、アバターの衣服等の指定した部分を自分の視点からだけ見えなくするシェーダーです。マフラー等、首回りを覆われて視界が阻害される場合に効果的です。このシェーダーを使用していても、VRカメラやミラー、他ユーザーから見た場合は見えなくなることなく通常通り見えますので、見た目を損なうことはありません。
                             　Arktoon-Shaders-1.0.2.6を基に改変しています。
                             　本家「Arktoon-Shaders」の開発終了に伴い、本シェーダーの更新はv1.4で最終版とし、今後は不具合対応のみ行います。
@@ -314,8 +314,7 @@
                         </div>
                       </section>
                       <section>
-                        <div class=
-                        "market-item-detail-module page_design" id=
+                        <div class="u-text-wrap page_design" id=
                         "modules"></div>
                       </section>
                     </div>
