--- a/VRChat/94/1338994.html
+++ b/VRChat/94/1338994.html
@@ -77,9 +77,9 @@
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <div class="page-wrap">
       <main role="main">
-        <div class="market-item-detail" data-product-brand=
-        "rietzscha" data-product-category="177" data-product-id=
-        "1338994" data-product-list="market_show"
+        <div class="market-item-detail u-bg-white"
+        data-product-brand="rietzscha" data-product-category="177"
+        data-product-id="1338994" data-product-list="market_show"
         data-product-price="970" data-tracking="detail_item">
           <nav>
             <div class="breadcrumbs u-border-b u-border-100">
@@ -103,17 +103,17 @@
             </div>
           </nav>
           <article>
-            <div class="market-item-detail-article">
+            <div class=
+            "market-item-detail-article u-d-flex u-flex-column u-align-items-center u-pb-600 u-bg-white">
               <div class=
               "market-item-detail__exhibition-banner container">
               </div>
-              <div class="market-item-detail-article__body">
+              <div class="u-bg-white u-pt-600 u-px-700">
                 <div class="container">
-                  <div class="lo-grid">
-                    <div class="flex-order-summary">
+                  <div class="u-d-flex">
+                    <div class="u-order-1 l-col-2of5 u-pl-600">
                       <header>
-                        <div class=
-                        "flex-order-summary-shop_name-field">
+                        <div class="u-my-200 u-tpg-title3">
                           <a class="nav" target="_blank"
                           data-product-list=
                           "from market_show via market_item_detail to shop_index"
@@ -124,13 +124,13 @@
                             <img alt="またいつか" class=
                             "user-avatar at-item-summary" src=
                             "https://booth.pximg.net/c/48x48/users/15861/icon_image/b88a9918-8d78-49d4-a891-b8354b2f6526_base_resized.jpg">
-                            <div class=
-                            "flex-order-summary-shop_name">
+                            <div class="u-text-ellipsis">
                               またいつか
                             </div>
                           </div></a>
                         </div>
-                        <h2 class="item-summary__item-name">
+                        <h2 class=
+                        "u-text-wrap u-tpg-title1 u-mt-0 u-mb-400">
                           隊長ビビり顔アクリルキーホルダー
                         </h2>
                         <div class="item-summary__caption"></div>
@@ -226,17 +226,16 @@
                         </ul>
                       </section>
                       <section>
-                        <div class="share-btns">
-                          <div class="social-btn twitter">
-                            <a data-url=
-                            "https://booth.pm/ja/items/1338994"
-                            data-lang="ja" data-hashtags="booth_pm"
-                            data-text="隊長ビビり顔アクリルキーホルダー | またいつか"
-                            data-count="none" class=
-                            "twitter-share-button" href=
-                            "https://twitter.com/share">ツイート</a>
-                          </div>
-                          <div class="social-btn facebook">
+                        <div class=
+                        "share-btns u-d-flex u-flex-1 u-align-items-center u-justify-content-start u-px-200 u-py-400">
+                          <a data-url=
+                          "https://booth.pm/ja/items/1338994"
+                          data-lang="ja" data-hashtags="booth_pm"
+                          data-text="隊長ビビり顔アクリルキーホルダー | またいつか"
+                          data-count="none" class=
+                          "twitter-share-button" href=
+                          "https://twitter.com/share">ツイート</a>
+                          <div class="u-ml-300">
                             <div class="fb-like" data-action="like"
                             data-href=
                             "https://booth.pm/ja/items/1338994"
@@ -246,7 +245,7 @@
                         </div>
                       </section>
                     </div>
-                    <div class="flex-order-body">
+                    <div class="u-order-0 l-col-3of5 u-pr-500">
                       <div class="primary-image-area">
                         <div>
                           <div class=
@@ -280,8 +279,8 @@
                       </div>
                       <section>
                         <div class=
-                        "market-item-detail-description">
-                          <p class="autolink">
+                        "js-market-item-detail-description">
+                          <p class="autolink u-text-wrap">
                             この商品はpixivFACTORYで作られた商品です。サンプル画像は完成イメージのため、実物と異なる場合があります。
                             Twitterで好評連載中！VRChat体験記漫画の隊長のアクリルキーホルダー第二弾はビビり状態！普通のヤツはないのだろうか？
                             VRChat体験記（漫画）↓
@@ -291,16 +290,18 @@
                             <div class="item-detail">
                               <p>
                                 <span class=
-                                "autolink">印刷方式：UVインクジェット印刷（片面）<br>
+                                "autolink u-text-wrap">印刷方式：UVインクジェット印刷（片面）<br>
+
                                 付属チェーン：ナスカン<br>
                                 厚さ：3mm<br>
                                 詳細なイメージは<a target="_blank" href=
                                 "https://factory.pixiv.net/booth/products/acrylic_key_chain">こちら</a>をご覧ください。</span>
                               </p><span class=
-                              "autolink"><small>※デザイン領域とカットラインの幅は、1~2mmほどの間で誤差があります。</small></span>
+                              "autolink u-text-wrap"><small>※デザイン領域とカットラインの幅は、1~2mmほどの間で誤差があります。</small></span>
                             </div>
                             <h4>
-                              <span class="autolink">発送予定日</span>
+                              <span class=
+                              "autolink u-text-wrap">発送予定日</span>
                             </h4>
                             <div class="item-detail">
                               <table class="condensed">
@@ -311,15 +312,14 @@
                                   <td class="is-right"></td>
                                 </tr>
                               </table><span class=
-                              "autolink"><small class=
+                              "autolink u-text-wrap"><small class=
                               "memo">※お振込を確認してから製造を開始するため、銀行・コンビニ決済でお支払いの際は記載されている発送予定日より遅くなる場合があります。</small></span>
                             </div>
                           </div>
                         </div>
                       </section>
                       <section>
-                        <div class=
-                        "market-item-detail-module page_design" id=
+                        <div class="u-text-wrap page_design" id=
                         "modules"></div>
                       </section>
                     </div>
